<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textAlignment="center"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/bt_spotify"
        android:background="#FFC107"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="launchPopularMoviesApp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/bt_scories"
        android:background="#FFC107"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="launchStockHawkApp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/bt_build"
        android:background="#FFC107"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="launchBuildItBiggerApp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app"
        android:id="@+id/bt_xyz"
        android:background="#FFC107"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="launchMakeYourApp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/bt_library"
        android:background="#FFC107"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="launchGoUbiquitousApp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/bt_capstone"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="launchCapstoneApp"/>

</LinearLayout>



